--- a/Fitnessing/Base.lproj/Main.storyboard
+++ b/Fitnessing/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="liP-2c-CRU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -37,7 +37,7 @@
             </objects>
             <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
         </scene>
-        <!--My Workouts-->
+        <!--Root View Controller-->
         <scene sceneID="wQa-8Y-lX6">
             <objects>
                 <tableViewController id="Muz-O6-Nsd" customClass="WorkoutTableViewController" customModule="Fitnessing" customModuleProvider="target" sceneMemberID="viewController">
@@ -62,13 +62,7 @@
                             <outlet property="delegate" destination="Muz-O6-Nsd" id="sQO-fc-Zx2"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Workouts" id="2Vw-BN-zvg">
-                        <barButtonItem key="leftBarButtonItem" image="BackButton" id="Wu4-Mm-0hW"/>
-                        <rightBarButtonItems>
-                            <barButtonItem title="Edit" id="NN3-EL-4mi"/>
-                            <barButtonItem title="Create" id="Ij3-Gg-G46"/>
-                        </rightBarButtonItems>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="2Vw-BN-zvg"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G3X-h5-dTB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -129,7 +123,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BackButton" width="18" height="11"/>
         <image name="HomeIcon" width="21" height="22"/>
         <image name="HomeIconOutline" width="21" height="22"/>
         <image name="UserIcon" width="24" height="24"/>
