--- a/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,7 +12,7 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Home-->
+        <!--Home View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="HomeViewController" customModule="Fitnessing" customModuleProvider="target" sceneMemberID="viewController">
@@ -31,91 +31,18 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="HomeIconOutline" selectedImage="HomeIcon" id="acW-dT-cKf"/>
+                    <navigationItem key="navigationItem" id="qvZ-K1-LSr"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
+            <point key="canvasLocation" x="1659.4202898550725" y="-320.08928571428572"/>
         </scene>
-        <!--Detail View Controller-->
-        <scene sceneID="7er-pv-kGG">
-            <objects>
-                <viewController id="nf0-N4-LP2" userLabel="Detail View Controller" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="h5U-pW-mg1">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="eGl-g7-Adg"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Tqt-Pw-5hH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2503" y="-667"/>
-        </scene>
-        <!--Workout Table View Controller-->
-        <scene sceneID="8JS-GN-wGC">
-            <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="qoe-Go-UxC" userLabel="Workout Table View Controller" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sYT-pO-IME">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="23F-uJ-Aqt">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="23F-uJ-Aqt" id="ebo-FG-n7G">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="qoe-Go-UxC" id="Qn0-u0-Tw1"/>
-                            <outlet property="delegate" destination="qoe-Go-UxC" id="BZR-A9-3Xa"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="eGL-ke-bBV"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7AR-Aa-BvH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3422" y="-1315"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="e2g-Cb-EOD">
-            <objects>
-                <navigationController id="TR8-58-z79" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XFQ-EW-orf">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="qoe-Go-UxC" kind="relationship" relationship="rootViewController" id="XpE-ED-FHk"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5K7-ai-Sdt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2503" y="-1315"/>
-        </scene>
-        <!--Workouts Split View Controller-->
-        <scene sceneID="6FE-vC-4BK">
-            <objects>
-                <splitViewController id="FJH-ja-10h" userLabel="Workouts Split View Controller" sceneMemberID="viewController">
-                    <connections>
-                        <segue destination="TR8-58-z79" kind="relationship" relationship="masterViewController" id="l2h-T9-3o2"/>
-                        <segue destination="nf0-N4-LP2" kind="relationship" relationship="detailViewController" id="9h1-qw-wKn"/>
-                    </connections>
-                </splitViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ATT-WY-V3b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1585" y="-991"/>
-        </scene>
-        <!--Root View Controller-->
+        <!--My Workouts-->
         <scene sceneID="wQa-8Y-lX6">
             <objects>
-                <tableViewController id="Muz-O6-Nsd" customClass="WorkoutTableViewController" customModule="Fitnessing" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="workouts" id="Muz-O6-Nsd" customClass="WorkoutTableViewController" customModule="Fitnessing" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jwj-MI-lVD">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
@@ -125,9 +52,26 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FAb-Bk-JRL" id="x8f-3r-PYe">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="185"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sxw-ou-rGv">
+                                            <rect key="frame" x="20" y="11" width="374" height="163"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="374" id="HWs-Jc-ccc"/>
+                                                <constraint firstAttribute="height" constant="163" id="lBy-yv-LgH"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="Sxw-ou-rGv" firstAttribute="centerY" secondItem="x8f-3r-PYe" secondAttribute="centerY" id="MZe-9T-l4G"/>
+                                        <constraint firstItem="Sxw-ou-rGv" firstAttribute="centerX" secondItem="x8f-3r-PYe" secondAttribute="centerX" id="hCY-h1-Qqk"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="Background" destination="Sxw-ou-rGv" id="wBs-ny-jaw"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -135,27 +79,24 @@
                             <outlet property="delegate" destination="Muz-O6-Nsd" id="sQO-fc-Zx2"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="2Vw-BN-zvg"/>
+                    <navigationItem key="navigationItem" title="My Workouts" id="2Vw-BN-zvg">
+                        <barButtonItem key="leftBarButtonItem" image="BackButton" id="V07-o7-yzj"/>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Edit" id="sBa-Wx-RJ0"/>
+                            <barButtonItem title="Create" id="vtZ-C3-eap"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G3X-h5-dTB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <navigationBar contentMode="scaleToFill" id="oUn-vX-iHy">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <items>
+                        <navigationItem title="Title" id="97k-yX-OzV"/>
+                    </items>
+                </navigationBar>
             </objects>
-            <point key="canvasLocation" x="2498.5507246376815" y="0.6696428571428571"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="fLY-5M-2Fq">
-            <objects>
-                <navigationController id="liP-2c-CRU" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7Kt-P7-5t7">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="Muz-O6-Nsd" kind="relationship" relationship="rootViewController" id="QFG-Ld-Loq"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BLd-RH-XsL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1586" y="1"/>
+            <point key="canvasLocation" x="2656.521739130435" y="-320.08928571428572"/>
         </scene>
         <!--Profile-->
         <scene sceneID="wg7-f3-ORb">
@@ -186,7 +127,7 @@
                         <color key="selectedImageTintColor" red="0.94016247990000001" green="0.59568780659999998" blue="0.5719992518" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
+                        <segue destination="rl3-1e-mCC" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
                 </tabBarController>
@@ -194,8 +135,30 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
+        <!--Home-->
+        <scene sceneID="TdU-88-NwU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rl3-1e-mCC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="HomeIconOutline" selectedImage="HomeIcon" id="acW-dT-cKf"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="mPz-To-TPb"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="A2t-pa-yMC">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="nAZ-d7-mmc"/>
+                        <segue destination="Muz-O6-Nsd" kind="show" id="nSb-3A-NIc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uhP-OC-fCH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="BackButton" width="18" height="11"/>
         <image name="HomeIcon" width="21" height="22"/>
         <image name="HomeIconOutline" width="21" height="22"/>
         <image name="UserIcon" width="24" height="24"/>
