--- a/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
@@ -143,7 +143,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dWq-vu-G0L">
-                                                    <rect key="frame" x="27" y="69" width="50" height="96"/>
+                                                    <rect key="frame" x="27" y="69" width="50" height="96.333333333333314"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="Ogv-8f-LIp"/>
@@ -187,7 +187,6 @@
                                                     <state key="normal" title="START"/>
                                                     <connections>
                                                         <action selector="startButton:" destination="FAb-Bk-JRL" eventType="touchUpInside" id="wxO-i2-B2k"/>
-                                                        <segue destination="Efw-Vk-Npb" kind="show" identifier="startWorkout" id="h5k-za-heC"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -394,14 +393,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6dh-PJ-pqB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2150.7246376811595" y="359.59821428571428"/>
+            <point key="canvasLocation" x="1926" y="362"/>
         </scene>
         <!--Workout In Progress View Controller-->
         <scene sceneID="GnS-ex-ONk">
             <objects>
                 <viewController storyboardIdentifier="inProgressWorkout" id="Efw-Vk-Npb" customClass="WorkoutInProgressViewController" customModule="Fitnessing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Imv-m0-hwQ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ft7-w8-mRm">
@@ -435,7 +434,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3eA-D7-VDi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3131.884057971015" y="359.59821428571428"/>
+            <point key="canvasLocation" x="3330" y="362"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="R7U-aW-wlD">
@@ -561,6 +560,7 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="nAZ-d7-mmc"/>
                         <segue destination="Muz-O6-Nsd" kind="show" identifier="myWorkouts" id="nSb-3A-NIc"/>
+                        <segue destination="Mlv-tf-gUX" kind="show" identifier="dashboardShowDetail" id="lxu-My-4IR"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uhP-OC-fCH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -575,4 +575,7 @@
         <image name="UserIcon" width="24" height="24"/>
         <image name="UserIconOutline" width="24" height="24"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="tjW-Gv-7zu"/>
+    </inferredMetricsTieBreakers>
 </document>
